# tf2-demo-player-aio

./: .gitignore  Cargo.toml  README.md  icons.toml  settings.json
cdconfigs/: default.cfg  idke.cfg  kal.cfg  midnight.cfg
demo-analysis/: Cargo.toml  README.md
demo-analysis/src/: lib.rs
demo-analysis/src/algorithms/: all_messages.rs  angle_history.rs  backtrack.rs  double_tap.rs  viewangles_180degrees.rs  viewangles_to_csv.rs  write_to_file.rs
demo-analysis/src/algorithms/nocrex/: aimsnap.rs  angle_repeat.rs  oob_pitch.rs
demo-analysis/src/base/: cheat_analyser_base.rs  demo_handler_base.rs
demo-analysis/src/lib/: algorithm.rs  parameters.rs
demo-analysis/src/util/: helpers.rs
demo-analysis/src/util/nocrex/: jankguard.rs
src/: cheat_analysis.rs  cheat_profiles.rs  demo_manager.rs  demo_strip.rs  main.rs  settings.rs
src/ui/: mod.rs  settings_window.rs
src/ui/cheater_window/: mod.rs
src/ui/main_window/: controls.rs  demo_list.rs  info_pane.rs  mod.rs
src/ui/player_search/: mod.rs
