[package]
name = "tf2-demo-player"
version = "0.4.3"
edition = "2021"

[dependencies]
tf-demo-parser = "0.6.4"
bitbuffer = { version = "0.11.1", features = ["serde"] }
glob = "0.3.2"
humantime = "2.2.0"
rcon = { version = "0.6.0", features = ["rt-async-std"] }
log = "0.4.27"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
opener = { version = "0.7.2", features = ["reveal"] }
chrono = "0.4.41"
size_format = "1.0.2"
trash = "5.2.2"
async-std = { version = "1.13.1", features = ["attributes"] }
rand = "0.8.5"
relm4 = { version = "0.9.1", features = ["gnome_46", "libadwaita"] }
relm4-components = { version = "0.9.1", features = ["libadwaita"] }
num_enum = "0.7.4"
parse-display = "0.10.0"
relm4-icons = { version = "0.9.0", features = ["icon-development-kit"] }
regex = "1.11.1"
regex-macro = "0.2.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
simplelog = "0.12.2"
anyhow = "1.0.98"
reqwest = "0.12.22"
bitcode = { version = "0.6.6", features = ["serde"] }
pollster = "0.4.0"
rayon = "1.10.0"
demo-analysis = { path = "../demo-analysis" }

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.22"

[build-dependencies]
gvdb = { version = "0.8.0", features = ["gresource"] }

[profile.release]
codegen-units = 1
lto = true
